--- a/app.json
+++ b/app.json
@@ -25,6 +25,14 @@
     },
     "web": {
       "favicon": "./src/shared/assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "the app needs access to your camera in order to take photos of your favorite places."
+        }
+      ]
+    ]
   }
 }
