--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-svg": "13.9.0",
     "yup": "^1.3.2",
-    "react-native-svg": "13.9.0"
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
