--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
@@ -22,9 +23,9 @@
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-maps": "1.7.1",
     "react-native-svg": "13.9.0",
-    "yup": "^1.3.2",
-    "react-native-maps": "1.7.1"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
