--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
@@ -25,6 +26,7 @@
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.1.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
